--- a/bus service.html
+++ b/bus service.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse nav-css" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">NoHome <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://paytm.com/">Payment Link</a>
