--- a/bus service.html
+++ b/bus service.html
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse nav-css" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">NoHome <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">NameHome <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://paytm.com/">Payment Link</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Updown</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">User Profile</a>
                 <a class="dropdown-item" href="#">Update Home Location</a>
