--- a/bus service.html
+++ b/bus service.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="https://paytm.com/">Payment Link</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Updown</a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">User Profile</a>
                 <a class="dropdown-item" href="#">Update Home Location</a>
@@ -123,7 +123,7 @@
     <hr>
     <h2 class="text-center">RECOMMENDED PRODUCTS</h2>
     <hr>
-    <div class="container">
+<div class="container">
       <div class="row text-center">
         <div class="col-md-4 pb-1 pb-md-0">
           <div class="card">
@@ -138,7 +138,6 @@
         <div class="col-md-4 pb-1 pb-md-0">
           <div class="card">
             <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
-            <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Add to Cart</a>
@@ -190,8 +189,8 @@
         </div>
       </div>
     </div>
-    <hr>
-    <h2 class="text-center">FEATURED PRODUCTS</h2>
+
+<h2 class="text-center">FEATURED PRODUCTS</h2>
     <hr>
     <div class="container">
       <div class="row">
@@ -334,5 +333,5 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap-4.4.1.js"></script>
-  </body>
+</body>
 </html>
